--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <body>
     
     <main class="container-fluid">
-        <span class="ms_numbers">numeri</span>
+        <div class="ms_container container-fluid mt-5">
+            <span class="ms_numbers d-flex justify-content-center fs-2">numeri</span>
+        </div>
+        <div class="ms_indovinati container-fluid mt-5">
+            <h6 class="indovinati justify-content-center fs-2">1</h6>
+        </div>
     </main>
 
     <!-- Js -->
